--- a/visual/HiDebug/HiDebug/HiDebug.csproj
+++ b/visual/HiDebug/HiDebug/HiDebug.csproj
@@ -44,7 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyDebug.cs" />
+    <Compile Include="Debuger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
